# qt_1

./: CMakeLists.txt  main.cpp  utils.cpp
inc/: utils.h
